--- a/app/src/main/res/layout/fragment_prescription.xml
+++ b/app/src/main/res/layout/fragment_prescription.xml
@@ -4,72 +4,286 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.PrescriptionFragment"
-    android:padding="16dp">
+    tools:context=".fragments.PrescriptionFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
-        <TextView
-            android:id="@+id/PlainText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prediction Model"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/inputcard"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/InputBox"
-            android:layout_marginBottom="16dp"
-            />
-
-        <EditText
-            android:id="@+id/InputBox"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter symptoms here..."
-            android:padding="12dp"
-            android:background="@android:drawable/editbox_background"
-            android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/PlainText"
+            android:elevation="25dp"
+            app:cardBackgroundColor="#65d3a5"
+            app:cardCornerRadius="30dp"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                android:paddingTop="20dp"
+                android:paddingEnd="20dp"
+                android:paddingBottom="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Enter Symptoms"
+                    android:textColor="#302E2E"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/editTextSymptoms"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/edit_bg"
+                    android:hint="Add Symptoms..."
+                    android:textColor="@color/white"
+                    android:inputType="text"
+                    android:paddingStart="25dp"
+                    android:paddingTop="2dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="2dp"
+                    android:textColorHint="@color/white" />
+
+                <Button
+                    android:id="@+id/predictBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="#302E2E"
+                    android:text="Predict"
+                    android:textColor="#FFFFFF"/>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/outputcard"
+            app:layout_constraintTop_toBottomOf="@id/inputcard"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="16dp"
-            />
-
-        <Button
-            android:id="@+id/predictBtn"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Predict"
-            android:textAllCaps="false"
-            android:backgroundTint="@color/black"
-            android:textColor="@android:color/white"
-            android:paddingVertical="12dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/InputBox"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/PredictedDisease"
-            />
+            android:elevation="25dp"
+            android:layout_marginTop="15dp"
+            app:cardBackgroundColor="#65d3a5"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/PredictedDisease"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Predicted disease will appear here"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:gravity="center"
-            android:padding="16dp"
-            app:layout_constraintTop_toBottomOf="@id/predictBtn"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:gravity="center"
+               android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Predicted Disease"
+                android:textSize="25sp"
+                android:textStyle="bold"
+               />
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:id="@+id/predictedDisease"
+                       android:textAlignment="center"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Description"
+                   android:textSize="25sp"
+                   android:textStyle="bold"
+                   />
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:id="@+id/Description"
+                       android:layout_width="match_parent"
+                       android:textAlignment="center"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Medication"
+                   android:textSize="25sp"
+                   android:textStyle="bold"
+                   />
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:id="@+id/Medication"
+                       android:layout_width="match_parent"
+                       android:textAlignment="center"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Precaution"
+                   android:textSize="25sp"
+                   android:textStyle="bold"
+                   />
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:id="@+id/Precaution"
+                       android:layout_width="match_parent"
+                       android:textAlignment="center"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Diet"
+                   android:textSize="25sp"
+                   android:textStyle="bold"
+                   />
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:id="@+id/Diet"
+                       android:layout_width="match_parent"
+                       android:textAlignment="center"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Workout"
+                   android:textSize="25sp"
+                   android:textStyle="bold"
+                   />
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:id="@+id/Workout"
+                       android:layout_width="match_parent"
+                       android:textAlignment="center"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+               <androidx.cardview.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="1dp"
+                   card_view:cardCornerRadius="8dp"
+                   card_view:cardElevation="4dp"
+                   card_view:cardBackgroundColor="@android:color/black">
+                   <TextView
+                       android:layout_width="match_parent"
+                       android:textAlignment="center"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="16dp"
+                       android:text="This is a black card"
+                       android:textColor="@android:color/white"
+                       android:textSize="18sp" />
+
+               </androidx.cardview.widget.CardView>
+
+           </LinearLayout>
+            </ScrollView>
+
+        </androidx.cardview.widget.CardView>
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
