--- a/android/app/src/main/res/layout/activity_registration.xml
+++ b/android/app/src/main/res/layout/activity_registration.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- ====== Top: Profile Image (rounded) ====== -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="wrap_content"
@@ -19,10 +20,10 @@
             android:id="@+id/registerUserImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="center"
-            />
+            android:layout_gravity="center" />
     </androidx.cardview.widget.CardView>
 
+    <!-- ====== Name Field ====== -->
     <EditText
         android:id="@+id/name"
         android:layout_width="350dp"
@@ -40,7 +41,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.174" />
 
-
+    <!-- ====== Email Field ====== -->
     <EditText
         android:id="@+id/email"
         android:layout_width="350dp"
@@ -57,6 +58,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.295" />
 
+    <!-- ====== Password Field ====== -->
     <EditText
         android:id="@+id/setpassword"
         android:layout_width="350dp"
@@ -75,6 +77,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.357" />
 
+    <!-- ====== Confirm Password Field ====== -->
     <EditText
         android:id="@+id/ConfirmPassword"
         android:layout_width="350dp"
@@ -93,6 +96,58 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
+    <!-- ====== New: "Are you a doctor?" Checkbox (below ConfirmPassword) ====== -->
+    <CheckBox
+        android:id="@+id/isDoctorCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Are you a doctor?"
+        android:checked="false"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/ConfirmPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- ====== New: Certificate Number Field (Initially Hidden, below the Checkbox) ====== -->
+    <EditText
+        android:id="@+id/doctorCertNumber"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_edittext_background"
+        android:gravity="center"
+        android:hint="Registration Number"
+        android:inputType="text"
+        app:layout_constraintTop_toBottomOf="@id/isDoctorCheckbox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    <ProgressBar
+        android:id="@+id/progressCert"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/doctorCertNumber"
+        app:layout_constraintBottom_toBottomOf="@id/doctorCertNumber"
+        app:layout_constraintTop_toTopOf="@id/doctorCertNumber"
+        android:layout_marginEnd="12dp" />
+
+    <ImageView
+        android:id="@+id/doneCert"
+        android:layout_width="24dp"
+        android:background="@drawable/circle_bg"
+        android:layout_height="24dp"
+        android:src="@drawable/okk"
+    android:visibility="gone"
+    app:layout_constraintEnd_toEndOf="@id/doctorCertNumber"
+    app:layout_constraintBottom_toBottomOf="@id/doctorCertNumber"
+    app:layout_constraintTop_toTopOf="@id/doctorCertNumber"
+    android:layout_marginEnd="12dp" />
+
+
+    <!-- ====== Sign Up Button (remains below the doctor fields) ====== -->
     <Button
         android:id="@+id/signup_button"
         android:layout_width="250dp"
@@ -103,13 +158,42 @@
         android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintTop_toBottomOf="@id/doctorCertNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.718" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp" />
 
+    <!-- ====== "Already Have an Account?" Text ====== -->
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:letterSpacing="0.1"
+        android:text="@string/already_have_an_account"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/signup_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.264"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <!-- ====== "Login" Redirect Text ====== -->
+    <TextView
+        android:id="@+id/RedirectLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login2"
+        android:textColor="@color/skyBlue"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.823" />
+
+    <!-- ====== "Show/Hide Password" Icons ====== -->
     <ImageView
         android:id="@+id/eye"
         android:layout_width="20dp"
@@ -134,49 +218,7 @@
         app:layout_constraintVertical_bias="0.542"
         app:srcCompat="@drawable/eye" />
 
-    <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.887"
-        app:srcCompat="@drawable/examination" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:letterSpacing="0.1"
-        android:text="@string/already_have_an_account"
-        android:textColor="@color/black"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.264"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.963" />
-
-    <TextView
-        android:id="@+id/RedirectLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login2"
-        android:textColor="@color/skyBlue"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.963" />
-
+    <!-- ====== Icon Indicators for Each Field ====== -->
     <ImageView
         android:id="@+id/imageView17"
         android:layout_width="20dp"
@@ -224,6 +266,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.543"
         app:srcCompat="@drawable/password1" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
